# CS231n-assignments-study

./: .gitignore  README.md
assignment1/: FullyConnectedNets.ipynb  features.ipynb  knn.ipynb  pyproject.toml  softmax.ipynb  two_layer_net.ipynb
assignment1/cs231n/: layers.py  optim.py
assignment1/cs231n/classifiers/: fc_net.py  k_nearest_neighbor.py  linear_classifier.py  softmax.py
assignment2/: BatchNormalization.ipynb  ConvolutionalNetworks.ipynb  Dropout.ipynb  PyTorch.ipynb  RNN_Captioning_pytorch.ipynb  pyproject.toml
assignment2/cs231n/: layers.py  rnn_layers_pytorch.py
assignment2/cs231n/classifiers/: cnn.py  fc_net.py  rnn_pytorch.py
assignment3/: CLIP_DINO.ipynb  DDPM.ipynb  Self_Supervised_Learning.ipynb  Transformer_Captioning.ipynb  pyproject.toml
assignment3/cs231n/: clip_dino.py  gaussian_diffusion.py  transformer_layers.py  unet.py
assignment3/cs231n/classifiers/: transformer.py
assignment3/cs231n/simclr/: contrastive_loss.py  data_utils.py  utils.py
