[project]
name = "assignment2"
version = "0.1.0"
authors = [
    { name = "Janghan Noh", email = "felkared@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cython>=3.2.2",
    "future>=1.0.0",
    "imageio>=2.37.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "scipy>=1.16.3",
    "six>=1.17.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
